# abb_irb2600_ws

./: README.md  irb2600_launch.sh
devel/: .catkin  local_setup.sh  setup.sh
devel/lib/pkgconfig/: abb_irb1600_support.pc  abb_irb2600_gazebo.pc  abb_irb2600_interface.pc  abb_irb2600_iterface.pc  abb_irb2600_moveit_config.pc  abb_irb2600_support.pc
devel/share/abb_irb1600_support/cmake/: abb_irb1600_supportConfig.cmake
src/abb_irb2600_gazebo/: CMakeLists.txt
src/abb_irb2600_gazebo/config/: irb2600_12_165_controller.yaml
src/abb_irb2600_gazebo/launch/: irb2600_12_165_control.launch  irb2600_12_165_gazebo.launch  load_irb2600_12_165.launch
src/abb_irb2600_gazebo/models/collision/: model.config  model.sdf
src/abb_irb2600_gazebo/urdf/: irb2600_12_165.xacro  irb2600_12_165_macro.xacro
src/abb_irb2600_interface/: CMakeLists.txt
src/abb_irb2600_interface/scripts/: IK_cartesian_path.py  IK_destination_pose.py  command.py  forward_kinematics.py  optimal_trajectory.py  sin_wave.py  trajectory.py
src/abb_irb2600_moveit_config/: .setup_assistant  CMakeLists.txt
src/abb_irb2600_moveit_config/config/: abb_irb2600_12_165.srdf  controllers.yaml  joint_limits.yaml  ompl_planning.yaml
src/abb_irb2600_moveit_config/launch/: abb_irb2600_12_165_moveit_controller_manager.launch.xml  abb_irb2600_planning_execution.launch  demo_gazebo.launch  moveit.rviz  moveit_rviz.launch  planning_context.launch  run_benchmark_ompl.launch
src/abb_irb2600_support/urdf/: abb_irb2600_12_165.gv  irb.urdf  irb2600.urdf  irb2600_12_165_macro.xacro
(+5 files in other folders)
